--- a/src/main/resources/templates/new_donation.html
+++ b/src/main/resources/templates/new_donation.html
@@ -184,6 +184,11 @@
                             <textarea class="form-control" rows="3" th:value="${member != null ? member.address : 'Default Address'}" name="address" disabled></textarea>
                         </div>
 
+                        <div class="mb-3">
+                            <label class="form-label">Description</label>
+                            <textarea class="form-control" name="description" required></textarea>
+                        </div>
+
                         <div class="text-end">
                             <button type="submit" class="btn btn-primary px-4">Submit Donation</button>
                         </div>
